# forge-fleet

./: .cursor-tmp-verify-part3.py  .cursor_run_checks.sh  .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  README.md  _extract_overview_tiles.py  compose.yaml  git-install.sh  install-update.sh  install-user.sh  install.sh  package-lock.json  package.json  playwright.config.ts  pyproject.toml  run-dev.sh  setup.sh  uninstall-update.sh  uninstall-user.sh  update-system.sh  update-user.sh  upgrade.sh
.forge/: cursor-rules-manifest.json
docs/: ADMIN-STATUS-OVERVIEW-DESIGN.md  CADDY-SYSTEMD.md  CADDY-UNIFIED-GRANITE.md  CONTAINER-TEMPLATES.md  FORGE-LCDL.md  GIT-INSTALL.md  HOST-BOOTSTRAP.md  OVERVIEW.md  PROMPT-run-docker-integration-test.md  WORKSPACE-LOCALIZATION-SCOPE.md  WORKSPACE_UPLOAD.md  host-operator-steps.json  site-nav.yaml
e2e/: admin-container-types-templates.spec.ts  admin-status-overview.spec.ts  docs-screenshots.spec.ts  start-fleet-server.sh
fleet_server/: __init__.py  __main__.py  admin_shell.py  certificator_worker_dockerfile.py  container_layout.py  container_templates.py  containers.py  fleet_apps.py  forge_llm_service.py  host_cpu_probe.py  host_stats.py  main.py  runner.py  self_update.py  store.py  telemetry_periods.py  telemetry_rollup.py  telemetry_rollup_cli.py  telemetry_sampler.py  templates_catalog.py  test_fleet.py  thermal_llm_policy.py  versioning.py  workspace_bundle.py
forge/: forge.config.yaml
scripts/: _bundle_and_check.py  apply_openapi_contract.py  bump_pyproject_version.py  bundle_admin_app.py  bundle_admin_html.py  bundle_openapi.py  check-docs-all.sh  check-docs-assets.py  check-docs-contracts.py  check-docs-examples.py  check-docs-json.py  check-docs-links.py  check-docs-public-copy.py  check-live-docs-site.sh  check-openapi-quality.py  check-schema-examples.py  check-version-consistency.py  diagnose-admin-assets.sh  fleet-host-upgrade-hints.sh  install-caddy-fleet-ollama-unified.sh  install-caddy-fleet.sh  install-docker-engine-fleet-e2e.sh  install-forge-fleet-caddy-systemd.sh  install-forge-fleet-caddy-user-systemd.sh  openapi_fragments.py  set-fleet-git-root-in-env.sh  smoke-admin-ui.mjs  split_admin_html_fragments.py  split_footprint_modules.py  update-fleet-unified-caddy.sh  update-fleet.sh
systemd/: environment.example  (+3 more)
(+318 files in other folders)
