[project]
name = "forge-fleet"
version = "0.3.49"
description = "HTTP orchestrator for local Docker (and future remote) Docs Health / tasklet jobs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
fleet-server = "fleet_server.main:main"
fleet-telemetry-sample = "fleet_server.telemetry_sampler:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fleet_server"]

[tool.setuptools.package-data]
fleet_server = ["static/*.html", "static/gpu-logos/*.png"]

[tool.pytest.ini_options]
markers = [
    "integration: requires a working Docker daemon (see tests/test_fleet_docker_integration.py)",
]
